# claude_codex_bridge

./: CHANGELOG.md  README.md  README_zh.md  ccb  ccb.py  ccb_test  install.ps1  install.sh  package.json
.github/workflows/: npm-publish.yml  release-artifacts.yml  test.yml
claude_skills/ask/: RUNTIME.md  SKILL.md  SKILL.md.powershell
codex_skills/ask/: SKILL.md
config/: ccb-border.sh  ccb-tmux-on.sh
docs/: ccb-config-layout-contract.md  ccb-project-shared-memory-plan.md  ccb-provider-state-storage-boundary-plan.md  ccbd-diagnostics-contract.md  ccbd-manual-test-issue-log.md  ccbd-startup-supervision-contract.md  claude-session-isolation-contract.md  codex-session-isolation-contract.md  gemini-session-isolation-contract.md  managed-provider-completion-reliability-plan.md  mobile-cloudflare-alpha.md  mobile-cloudflare-alpha.zh.md  opencode-completion-contract.md  runtime-accelerator-pr-notes.md  runtime-accelerator.md
docs/install-runtime-environment/: 03-remediation-design.md  04-validation-runbook.md  05-root-install-confirmation.md  README.md
docs/plantree/: README.md
droid_skills/: ask.md
droid_skills/ask/: SKILL.md
inherit_skills/droid_skills/: ask.md
inherit_skills/mimo_skills/: ask.md
lib/: provider_model_shortcuts.py  role_aliases.py
lib/ccbd/: no_reply_reason.py  reload_apply_service.py  reload_drain.py  reload_drain_auto_retry.py  reload_plan.py  (+1 more)
mobile/: .gitignore  README.md
rust/: Cargo.toml
rust/crates/ccb-heartbeat/: Cargo.toml
rust/crates/ccb-heartbeat/src/: classifier.rs  engine.rs  engine_runtime.rs  error.rs  lib.rs  lock.rs  maintenance.rs  models.rs  store.rs  time.rs
rust/crates/ccb-jobs/: Cargo.toml
rust/crates/ccb-jobs/src/: lib.rs  models.rs  store.rs
rust/crates/ccb-mailbox/: Cargo.toml
rust/crates/ccb-mailbox/src/: bureau.rs  control_queue.rs  control_trace.rs  facade_recording.rs  facade_state.rs  jobs.rs  kernel.rs  lib.rs  model_codecs.rs  model_enums.rs  models.rs  queries.rs  record_codec.rs  reply_metadata.rs  reply_payloads.rs  service.rs  service_state.rs  store.rs  stores.rs  summary.rs  targets.rs  transitions.rs
rust/crates/ccb-mailbox/src/re_export_tests/: claiming.rs  leasing.rs
rust/crates/ccb-mailbox/src/service_runtime/: mailbox.rs  mod.rs
rust/crates/ccb-mailbox/src/service_runtime/transitions_runtime/: claiming.rs  leasing.rs  mod.rs  terminal.rs
rust/crates/ccb-message-bureau/: Cargo.toml
rust/crates/ccb-message-bureau/src/: callback_edges.rs  control.rs  control_queue.rs  control_trace.rs  facade.rs  facade_recording.rs  facade_recording_common.rs  facade_recording_submission.rs  facade_recording_terminal.rs  facade_recording_terminal_attempts.rs  facade_recording_terminal_replies.rs  facade_state.rs  lib.rs  model_codecs.rs  model_enums.rs  models.rs  reply_metadata.rs  reply_payloads.rs  service_state.rs  store.rs
rust/crates/ccb-message-bureau/src/control_queue_runtime/: ack.rs  common.rs  events.rs  mod.rs  views.rs
rust/crates/ccb-message-bureau/src/control_queue_runtime/views_runtime/: agent.rs  common.rs  inbox.rs  summary.rs
rust/crates/ccb-message-bureau/src/control_trace_runtime/: collections.rs  mod.rs  service.rs  summaries.rs
rust/crates/ccb-project/: Cargo.toml
rust/crates/ccb-project/src/: discovery.rs  identity.rs  ids.rs  lib.rs  path_utils.rs  resolver.rs  runtime_paths.rs
rust/crates/ccb-provider-core/: Cargo.toml
rust/crates/ccb-provider-core/src/: fifo_delivery.rs  lib.rs  transport.rs
rust/crates/ccb-providers/: Cargo.toml
rust/crates/ccb-providers/src/providers/codex/: diagnostics.rs
rust/crates/ccb-py-heartbeat/: Cargo.toml  README.md  pyproject.toml
rust/crates/ccb-py-heartbeat/src/: lib.rs
rust/crates/ccb-py-mailbox/: Cargo.toml  README.md  pyproject.toml
rust/crates/ccb-py-mailbox/src/: lib.rs
rust/crates/ccb-runtime-accelerator/src/: lib.rs
rust/crates/ccb-runtime-env/: Cargo.toml
rust/crates/ccb-runtime-env/src/: control_plane.rs  env.rs  lib.rs  user_session.rs
rust/crates/ccb-storage/: Cargo.toml
rust/crates/ccb-storage-classification/: Cargo.toml
rust/crates/ccb-storage-classification/src/: classification.rs  lib.rs  models.rs  provider_home.rs  service.rs
rust/crates/ccb-storage/src/: atomic.rs  cursor_store.rs  json.rs  json_store.rs  jsonl.rs  jsonl_store.rs  lib.rs  locks.rs  path_helpers.rs  paths.rs  paths_agents.rs  paths_ccbd.rs  paths_targets.rs  project_identity.rs  text_artifacts.rs
rust/crates/ccb-types/: Cargo.toml
rust/crates/ccb-types/src/: error.rs  lib.rs  ui.rs
rust/crates/ccb-ui-text/: Cargo.toml
rust/crates/ccb-ui-text/src/: i18n.rs  lib.rs  text.rs
scripts/: bootstrap-windows-test-env.ps1  build_release.py  dynamic_layout_smoke.py  orchestrator_capacity_semantic_smoke.py  reload_busy_drain_smoke.py
test/: conftest.py  test_agent_lifecycle_cli.py  test_agents_layout_runtime.py  test_agy_execution_polling.py  test_ask_cli.py  test_ask_skill_templates.py  test_build_linux_release_script.py  test_ccb_github_skill.py  test_ccbd_health_assessment_provider_pane.py  test_ccbd_namespace_additive_patch.py  test_ccbd_namespace_topology_plan.py  test_ccbd_project_focus.py  test_ccbd_project_view.py  test_ccbd_quota_buckets.py  test_ccbd_reload_drain.py  test_ccbd_reload_drain_auto_retry.py  test_ccbd_reload_dry_run.py  test_ccbd_reload_runtime_mount.py  test_ccbd_reload_transaction.py  test_ccbd_retry_failure_detail.py  test_ccbd_start_handler.py  test_ccbd_start_preparation.py  test_claude_assistant_events.py  test_cli_identity_probe.py  test_cli_management_update.py  test_cli_services_mobile_update.py  test_cli_tools_workbench.py  test_codex_diagnostic_log_filter.py  test_codex_execution_polling.py  test_codex_launcher_session_paths.py  test_dynamic_agent_lifecycle_smoke_script.py  test_dynamic_layout_smoke_script.py  test_gemini_launcher_env.py  test_guarded_dynamic_layout_provider_smoke_script.py  test_heartbeat_shim.py  test_install_script_sidebar.py  test_install_source_dev_mode.py  test_install_watchdog_optional.py  test_kimi_completion_detection.py  test_kimi_sentinel_completion.py  (+63 more)
(+418 files in other folders)
