[workspace]
resolver = "2"
members = [
    "crates/ccb-runtime-accelerator",
    "crates/ccb-project",
    "crates/ccb-storage",
    "crates/ccb-storage-classification",
    "crates/ccb-jobs",
    "crates/ccb-heartbeat",
    "crates/ccb-mailbox",
    "crates/ccb-message-bureau",
    "crates/ccb-py-heartbeat",
    "crates/ccb-py-mailbox",
    "crates/ccb-types",
    "crates/ccb-runtime-env",
    "crates/ccb-ui-text",
]

[workspace.package]
version = "7.7.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
