[package]
name = "ccb-heartbeat"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
camino = { version = "1", features = ["serde1"] }
fs2 = "0.4"
ccb-storage = { path = "../ccb-storage" }

[dev-dependencies]
tempfile = "3"
