[package]
name = "ccb-message-bureau"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ccb-mailbox = { path = "../ccb-mailbox" }

[dev-dependencies]
tempfile = "3"
camino = { version = "1", features = ["serde1"] }
