[package]
name = "ccb-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
