[package]
name = "ccb-py-heartbeat"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ccb_py_heartbeat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ccb-heartbeat = { path = "../ccb-heartbeat" }
ccb-storage = { path = "../ccb-storage" }
camino = { version = "1", features = ["serde1"] }
serde_json = "1"
