[package]
name = "ccb-py-mailbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ccb_py_mailbox"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ccb-mailbox = { path = "../ccb-mailbox" }
ccb-message-bureau = { path = "../ccb-message-bureau" }
ccb-storage = { path = "../ccb-storage" }
ccb-jobs = { path = "../ccb-jobs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
camino = { version = "1", features = ["serde1"] }
