[package]
name = "ccb-storage"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
camino = { version = "1", features = ["serde1"] }
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
ccb-project = { path = "../ccb-project" }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
ccb-storage-classification = { path = "../ccb-storage-classification" }
