[package]
name = "ccb-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ccb-runtime-env = { path = "../ccb-runtime-env" }
ccb-ui-text = { path = "../ccb-ui-text" }

[dev-dependencies]
serial_test = "3"
